test/classes/forwarding/forwarding-cycle.good
forwarding-cycle.chpl:4: error: unable to resolve type
